<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- no parent because we want to be able to build the samples without any defined global dependencies or code-analysis -->

    <groupId>org.linkki-framework.samples</groupId>
    <artifactId>linkki-samples-vaadin8</artifactId>
    <version>1.5.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <name>linkki Vaadin 8 Samples</name>


    <!-- tag::vaadin[] -->
    <properties>
        <!-- end::vaadin[] -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <!-- tag::vaadin[] -->
        <vaadin.version>8.13.1</vaadin.version>
        <!-- end::vaadin[] -->
        <spotbugs.version>3.1.12</spotbugs.version>
        <!-- tag::vaadin[] -->
        <spring-boot.version>2.5.0</spring-boot.version>
        <!-- Ignore duplications due to Vaadin8/14 projects -->
        <sonar.cpd.exclusions>**/*.java</sonar.cpd.exclusions>
    </properties>

    <!-- end::vaadin[] -->
    <modules>
        <module>getting-started</module>
        <module>test-playground</module>
    </modules>


    <dependencyManagement>
        <!-- tag::vaadin[] -->
        <dependencies>
            <!-- end::vaadin[] -->

            <!-- Spring boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-bom</artifactId>
                <type>pom</type>
                <scope>import</scope>
                <version>${vaadin.version}</version>
            </dependency>

            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>3.1.0</version>
                <scope>provided</scope>
            </dependency>

            <!-- tag::vaadin[] -->
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-server</artifactId>
                <version>${vaadin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-compatibility-server</artifactId>
                <version>${vaadin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-themes</artifactId>
                <version>${vaadin.version}</version>
            </dependency>
            <!-- end::vaadin[] -->

            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-client-compiled</artifactId>
                <version>${vaadin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.linkki-framework</groupId>
                <artifactId>linkki-vaadin8-addon-compiled</artifactId>
                <version>1.5.0-SNAPSHOT</version>
            </dependency>

            <!-- tag::linkki-core-vaadin8[] -->
            <dependency>
                <groupId>org.linkki-framework</groupId>
                <artifactId>linkki-core-vaadin8</artifactId>
                <version>1.5.0-SNAPSHOT</version>
            </dependency>
            <!-- end::linkki-core-vaadin8[] -->
            <!-- tag::linkki-application-framework-vaadin8[] -->
            <dependency>
                <groupId>org.linkki-framework</groupId>
                <artifactId>linkki-application-framework-vaadin8</artifactId>
                <version>1.5.0-SNAPSHOT</version>
            </dependency>
            <!-- end::linkki-application-framework-vaadin8[] -->
            <dependency>
                <groupId>org.linkki-framework</groupId>
                <artifactId>linkki-apt</artifactId>
                <version>1.2.1-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-annotations</artifactId>
                <version>${spotbugs.version}</version>
                <scope>provided</scope>
            </dependency>
            <!-- tag::vaadin[] -->
        </dependencies>
        <!-- end::vaadin[] -->
    </dependencyManagement>


    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- otherwise we get warnings in eclipse that annotations can not be resolved -->
        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
        </dependency>

        <!-- This is included as a provided dependency to allow the maven compiler to pick up the current version of the 
            annotation processor in the build. Using the regular way of including it as annotation processor for the maven-compiler-plugin 
            depends on the annotation processor being installed in the Maven repository beforehand and as such fails when increasing 
            the version number or changing the annotation processor. -->
        <dependency>
            <groupId>org.linkki-framework.tooling</groupId>
            <artifactId>linkki-apt</artifactId>
            <version>1.5.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>


    <build>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                    <compilerArgs>
                        <arg>-Xlint</arg>
                        <!-- Because the eclipse compiler and javac differ: https://bugs.eclipse.org/bugs/show_bug.cgi?id=344783 -->
                        <arg>-Xlint:-varargs</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <!-- at the moment we do not check missing javadoc like missing @param or @return -->
                    <doclint>accessibility,html,reference,syntax</doclint>
                    <tags>
                        <tag>
                            <name>apiNote</name>
                            <placement>a</placement>
                            <head>API Note:</head>
                        </tag>
                        <tag>
                            <name>implSpec</name>
                            <placement>a</placement>
                            <head>Implementation Requirements:</head>
                        </tag>
                        <tag>
                            <name>implNote</name>
                            <placement>a</placement>
                            <head>Implementation Note:</head>
                        </tag>
                    </tags>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.tomee.maven</groupId>
                <artifactId>tomee-maven-plugin</artifactId>
            </plugin>

        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                    <configuration>
                        <skip>true</skip>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.tomee.maven</groupId>
                    <artifactId>tomee-maven-plugin</artifactId>
                    <version>7.1.3</version> <!-- TomEE 8 uses Java EE 8 -->
                </plugin>
            </plugins>
        </pluginManagement>

    </build>


</project>
